--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Domain Verification Dogfood</title>
-
+<meta name="facebook-domain-verification" content="i2rugqid8qb5cvw1q4dtjunvp2lpjh" />
 </head>
 
 
